--- a/hr-eureka-server/src/main/resources/application.properties
+++ b/hr-eureka-server/src/main/resources/application.properties
@@ -6,3 +6,6 @@ server.port = 8761
 eureka.client.register-with-eureka=false
 eureka.client.fetch-register=false
 
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
+ribbon.ConnectTimeout=10000
+ribbon.ReadTimeout=20000
